Ensure spacing throughout layout is consistent
* Use $global-spacing variable to make sure everything (as far as is
sensibly possible) comes in multiples of 3em.
* Refactor the layout slightly to avoid main content area being too
wide. Will need to come up with a solution for mobile so that the size
of the nav sidebar doesn't reduce and the nav icon doesn't get hidden.

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -10,12 +10,12 @@
 %grid-wide {
 	@extend %grid-fixed;
 
-	width:50em;
-	padding-right:10em; // make space for positioned sidebar
+	width:auto;
+	padding-right:(4 * $global-spacing) + 1em;
 }
 %grid-narrow {
 	@extend %grid-fixed;
-	width:12em;
+	width:4 * $global-spacing;
 }
 
 .site-navigation {
@@ -30,6 +30,11 @@
 .site-footer {
 	position:relative;
 }
+.home, .post,
+.site-footer,
+.site-footer-social {
+	padding:$global-spacing;
+}
 
 .site-sidebar {
 	right:0;
@@ -38,20 +43,23 @@
 .site-footer-social {
 	position:absolute;
 	top:0;
-	width:10em;
+	width:4 * $global-spacing;
 }
 .site-footer-social {
 	left:100%;
 	height:100%;
 }
-.site-footer:after {
-	content:"";
-	position:absolute;
-	top:-5px;
-	left:0;
+.site-footer {
 
-	width:10000px;
-	height:100%;
+	&:after {
+		content:"";
+		position:absolute;
+		top:-5px;
+		left:0;
 
-	z-index:-1;
+		width:10000px;
+		height:100%;
+
+		z-index:-1;
+	}
 }
