--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,6 +2,8 @@
 // $$ Variables
 //**************************
 
+$global-spacing:3em;
+
 $color-light:#ccc;
 $color-dark:#333;
 
